--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -22,7 +22,7 @@
     <script src="../JS/shop.js" defer></script>
 
     <!-- linking the navbar js file -->
-    <script src="../CSS/navbar.css" defer></script>
+    <script src="../JS/navbar.js" defer></script>
   </head>
   <body>
     <div class="root">
